[tool.poetry]
name = "test-streamlit-docker"
version = "0.1.0"
description = ""
authors = ["Quinton Mays <qmays@phdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
streamlit = "^1.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
